[gd_scene load_steps=27 format=1]

[ext_resource path="res://JetpackGameMode/Obstacles/Obstacle_Looper.gd" type="Script" id=1]
[ext_resource path="res://JetpackGameMode/Obstacles/PipeBrain.gd" type="Script" id=2]
[ext_resource path="res://JetpackGameMode/Obstacles/JetpackGame_Tentacles_Pipe.png" type="Texture" id=3]
[ext_resource path="res://JetpackGameMode/Obstacles/JetpackGame_Tentacles_Trap.png" type="Texture" id=4]
[ext_resource path="res://JetpackGameMode/Character/JetpackGame_Character.png" type="Texture" id=5]

[sub_resource type="ConvexPolygonShape2D" id=22]

custom_solver_bias = 0.0
points = Vector2Array( -45.5796, -3.44971, -116.939, -11.1629, -133.406, -21.5461, -116.939, -31.3359, -59.3025, -48.2456, 31.2688, -3.44971 )

[sub_resource type="ConvexPolygonShape2D" id=23]

custom_solver_bias = 0.0
points = Vector2Array( -49.6965, 59.7392, -24.9951, 52.6193, 14.8013, 53.5093, 36.7581, 57.3659, 44.9917, 63.8925, 31.2688, 70.419, 3.823, 73.6823, -15.3892, 73.3856, -40.0903, 70.419, -51.0688, 64.4858 )

[sub_resource type="ConvexPolygonShape2D" id=24]

custom_solver_bias = 0.0
points = Vector2Array( -101.844, -82.6583, 43.6196, -47.6523, 104, -31.9292, 124.585, -21.2494, 112.234, -11.1629, 31.2688, -3.44971, -59.3025, -48.2456 )

[sub_resource type="ConvexPolygonShape2D" id=25]

custom_solver_bias = 0.0
points = Vector2Array( 88.9053, -82.065, 130.074, -69.9019, 124.585, -61.5954, 43.6196, -47.6523, -101.844, -82.6583 )

[sub_resource type="ConvexPolygonShape2D" id=26]

custom_solver_bias = 0.0
points = Vector2Array( 13.429, 32.1497, -30.4844, 33.0397, -64.7917, 22.3599, -73.0254, 11.3834, -45.5796, -3.44971, 31.2688, -3.44971, 60.0869, 8.41675, 60.0869, 21.7665 )

[sub_resource type="ConvexPolygonShape2D" id=27]

custom_solver_bias = 0.0
points = Vector2Array( 14.8013, 53.5093, -24.9951, 52.6193, -42.835, 49.6527, -46.9519, 45.4994, -30.4844, 33.0397, 13.429, 32.1497, 34.0134, 44.6095, 35.3857, 48.4661 )

[sub_resource type="ConvexPolygonShape2D" id=28]

custom_solver_bias = 0.0
points = Vector2Array( -136.151, -63.3753, -137.523, -71.0885, -101.844, -82.6583, -59.3025, -48.2456 )

[sub_resource type="ConvexPolygonShape2D" id=29]

custom_solver_bias = 0.0
points = Vector2Array( 38.5266, -65.7796, 11.7573, -60.4163, -22.3738, -60.7061, -43.1199, -64.33, -52.4893, -71.5778, -39.1045, -77.0861, -19.6968, -81.5797, 3.05713, -81.5797, 27.1497, -79.4053, 43.2112, -72.3026 )

[sub_resource type="ConvexPolygonShape2D" id=30]

custom_solver_bias = 0.0
points = Vector2Array( -52.4891, 40.4723, 29.8264, -3.44901, 104.111, 2.92896, 123.519, 9.59692, 112.142, 22.2079, 39.1958, 40.9072, -95.3202, 74.1018 )

[sub_resource type="ConvexPolygonShape2D" id=31]

custom_solver_bias = 0.0
points = Vector2Array( -95.3202, 74.1018, -127.443, 68.0138, -135.474, 62.0706, -120.751, 52.5036, -52.4891, 40.4723 )

[sub_resource type="ConvexPolygonShape2D" id=32]

custom_solver_bias = 0.0
points = Vector2Array( 39.1958, 40.9072, 103.442, 50.7641, 124.858, 59.1715, 118.165, 68.1587, 81.3574, 74.8266, -95.3202, 74.1018 )

[sub_resource type="ConvexPolygonShape2D" id=33]

custom_solver_bias = 0.0
points = Vector2Array( -52.4891, 40.4723, -116.066, 23.9474, -128.113, 13.5107, -116.066, 4.08862, -39.7737, -3.59396, 29.8264, -3.44901 )

[sub_resource type="ConvexPolygonShape2D" id=34]

custom_solver_bias = 0.0
points = Vector2Array( 13.0957, -39.9776, -23.7122, -40.1226, -42.4507, -49.5446, -44.4585, -56.0676, -22.3738, -60.7061, 11.7573, -60.4163, 31.8342, -57.3722, 35.1804, -50.4144 )

[sub_resource type="ConvexPolygonShape2D" id=35]

custom_solver_bias = 0.0
points = Vector2Array( -65.2046, -28.3813, -23.7122, -40.1226, 13.0957, -39.9776, 30.4958, -37.0786, 59.2727, -27.8015, 58.6035, -15.9152, 45.8882, -5.04352, 29.8264, -3.44901, -39.7737, -3.59396, -66.5431, -15.3353 )

[sub_resource type="SpriteFrames" id=15]

animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "pipe",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "bomb",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=16]

animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "struggling",
"speed": 0.0
} ]

[sub_resource type="Animation" id=17]

length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionTop:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 180, -489 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionBottom:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 180, 489 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TentacleTop:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 50, -583 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TentacleBottom:transform/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 50, 583 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TentacleTop:animation")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "bomb" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TentacleBottom:animation")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "bomb" ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TentacleBottom:offset")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -174 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CollisionBottom:transform/scale")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CollisionTop:transform/scale")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=18]

resource/name = "die"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionTop:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 180, -489 ), Vector2( 180, -1580 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionBottom:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 180, 511.815 ), Vector2( 180, 1603.41 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TentacleTop:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 50, -918 ), Vector2( 50, -2000 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TentacleBottom:transform/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 50, 918 ), Vector2( 50, 2000 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TentacleTop:animation")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "pipe" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TentacleBottom:animation")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "pipe" ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TentacleBottom:offset")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -768 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CollisionBottom:transform/scale")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 4.61684 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CollisionTop:transform/scale")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 4.62579 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("TentacleBottom:modulate")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": FloatArray( 0, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.617188, 1, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("TentacleTop:modulate")
tracks/10/interp = 1
tracks/10/imported = false
tracks/10/keys = {
"times": FloatArray( 0, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.618683, 1, 0.00390625, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=19]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionTop:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0.5, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 180, -489 ), Vector2( 180, -1580 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionBottom:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.5, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 180, 511.815 ), Vector2( 180, 1603.41 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TentacleTop:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.5, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 50, -918 ), Vector2( 50, -2000 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TentacleBottom:transform/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0.5, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 50, 918 ), Vector2( 50, 2000 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TentacleTop:animation")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0.5 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "pipe" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TentacleBottom:animation")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0.5 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "pipe" ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TentacleBottom:offset")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0.5 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -768 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CollisionBottom:transform/scale")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0.5 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 4.61684 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CollisionTop:transform/scale")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0.5 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 4.62579 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("TentacleTop/DeadPlayer:flip_h")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true, false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("TentacleBottom/DeadPlayer:flip_h")
tracks/10/interp = 1
tracks/10/imported = false
tracks/10/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=20]

length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionTop:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 180, -510 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionBottom:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 180, 550 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TentacleTop:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 50, -940 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TentacleBottom:transform/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 50, 940 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TentacleTop:animation")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "pipe" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TentacleBottom:animation")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "pipe" ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TentacleBottom:offset")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -768 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CollisionBottom:transform/scale")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 4.61684 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CollisionTop:transform/scale")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 4.62579 ) ]
}

[sub_resource type="SegmentShape2D" id=21]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 0, 700 )

[node name="PipeTentacles0" type="StaticBody2D" groups=[
"pipes",
]]

transform/pos = Vector2( 1920, 540 )
input/pickable = false
shapes/0/shape = SubResource( 22 )
shapes/0/transform = Matrix32( 1, 0, 0, 4.62579, 180, -510 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 23 )
shapes/1/transform = Matrix32( 1, 0, 0, 4.62579, 180, -510 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 24 )
shapes/2/transform = Matrix32( 1, 0, 0, 4.62579, 180, -510 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 25 )
shapes/3/transform = Matrix32( 1, 0, 0, 4.62579, 180, -510 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 26 )
shapes/4/transform = Matrix32( 1, 0, 0, 4.62579, 180, -510 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 27 )
shapes/5/transform = Matrix32( 1, 0, 0, 4.62579, 180, -510 )
shapes/5/trigger = false
shapes/6/shape = SubResource( 28 )
shapes/6/transform = Matrix32( 1, 0, 0, 4.62579, 180, -510 )
shapes/6/trigger = false
shapes/7/shape = SubResource( 29 )
shapes/7/transform = Matrix32( 1, 0, 0, 4.61684, 180, 550 )
shapes/7/trigger = false
shapes/8/shape = SubResource( 30 )
shapes/8/transform = Matrix32( 1, 0, 0, 4.61684, 180, 550 )
shapes/8/trigger = false
shapes/9/shape = SubResource( 31 )
shapes/9/transform = Matrix32( 1, 0, 0, 4.61684, 180, 550 )
shapes/9/trigger = false
shapes/10/shape = SubResource( 32 )
shapes/10/transform = Matrix32( 1, 0, 0, 4.61684, 180, 550 )
shapes/10/trigger = false
shapes/11/shape = SubResource( 33 )
shapes/11/transform = Matrix32( 1, 0, 0, 4.61684, 180, 550 )
shapes/11/trigger = false
shapes/12/shape = SubResource( 34 )
shapes/12/transform = Matrix32( 1, 0, 0, 4.61684, 180, 550 )
shapes/12/trigger = false
shapes/13/shape = SubResource( 35 )
shapes/13/transform = Matrix32( 1, 0, 0, 4.61684, 180, 550 )
shapes/13/trigger = false
collision/layers = 4
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )

[node name="PipeBrain" type="Node" parent="."]

script/script = ExtResource( 2 )

[node name="EndPoint" type="Position2D" parent="."]

transform/pos = Vector2( 350, 0 )

[node name="TentacleTop" type="AnimatedSprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 50, -940 )
frames = SubResource( 15 )
animation = "pipe"
centered = false
flip_v = true

[node name="DeadPlayer" type="AnimatedSprite" parent="TentacleTop"]

visibility/visible = false
visibility/behind_parent = true
transform/pos = Vector2( 124, 0 )
frames = SubResource( 16 )
animation = "struggling"

[node name="CollisionTop" type="CollisionPolygon2D" parent="."]

transform/pos = Vector2( 180, -510 )
transform/scale = Vector2( 1, 4.62579 )
build_mode = 0
polygon = Vector2Array( 88.9053, -82.065, -101.844, -82.6583, -137.523, -71.0885, -136.151, -63.3753, -59.3025, -48.2456, -116.939, -31.3359, -133.406, -21.5461, -116.939, -11.1629, -45.5796, -3.44971, -73.0254, 11.3834, -64.7917, 22.3599, -30.4844, 33.0397, -46.9519, 45.4994, -42.835, 49.6527, -24.9951, 52.6193, -49.6965, 59.7392, -51.0688, 64.4858, -40.0903, 70.419, -15.3892, 73.3856, 3.823, 73.6823, 31.2688, 70.419, 44.9917, 63.8925, 36.7581, 57.3659, 14.8013, 53.5093, 35.3857, 48.4661, 34.0134, 44.6095, 13.429, 32.1497, 60.0869, 21.7665, 60.0869, 8.41675, 31.2688, -3.44971, 112.234, -11.1629, 124.585, -21.2494, 104, -31.9292, 43.6196, -47.6523, 124.585, -61.5954, 130.074, -69.9019 )
shape_range = Vector2( 0, 6 )
trigger = false

[node name="TentacleBottom" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 50, 940 )
frames = SubResource( 15 )
animation = "pipe"
centered = false
offset = Vector2( 0, -768 )

[node name="DeadPlayer" type="AnimatedSprite" parent="TentacleBottom"]

visibility/visible = false
visibility/behind_parent = true
transform/pos = Vector2( 124, 0 )
frames = SubResource( 16 )
animation = "struggling"

[node name="CollisionBottom" type="CollisionPolygon2D" parent="."]

transform/pos = Vector2( 180, 550 )
transform/scale = Vector2( 1, 4.61684 )
build_mode = 0
polygon = Vector2Array( -95.3202, 74.1018, 81.3574, 74.8266, 118.165, 68.1587, 124.858, 59.1715, 103.442, 50.7641, 39.1958, 40.9072, 112.142, 22.2079, 123.519, 9.59692, 104.111, 2.92896, 29.8264, -3.44901, 45.8882, -5.04352, 58.6035, -15.9152, 59.2727, -27.8015, 30.4958, -37.0786, 13.0957, -39.9776, 35.1804, -50.4144, 31.8342, -57.3722, 11.7573, -60.4163, 38.5266, -65.7796, 43.2112, -72.3026, 27.1497, -79.4053, 3.05713, -81.5797, -19.6968, -81.5797, -39.1045, -77.0861, -52.4893, -71.5778, -43.1199, -64.33, -22.3738, -60.7061, -44.4585, -56.0676, -42.4507, -49.5446, -23.7122, -40.1226, -65.2046, -28.3813, -66.5431, -15.3353, -39.7737, -3.59396, -116.066, 4.08862, -128.113, 13.5107, -116.066, 23.9474, -52.4891, 40.4723, -120.751, 52.5036, -135.474, 62.0706, -127.443, 68.0138 )
shape_range = Vector2( 7, 13 )
trigger = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/bomb = SubResource( 17 )
anims/die = SubResource( 18 )
anims/kill_player = SubResource( 19 )
anims/pipes = SubResource( 20 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Area2D" type="Area2D" parent="."]

transform/pos = Vector2( 388.933, 0 )
input/pickable = true
shapes/0/shape = SubResource( 21 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -350 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

transform/pos = Vector2( 0, -350 )
shape = SubResource( 21 )
trigger = false
_update_shape_index = 0

[connection signal="die" from="." to="PipeBrain" method="_on_PipeTentacles_Die"]

[connection signal="kill_player" from="." to="PipeBrain" method="_on_kill_player"]

[connection signal="reset" from="." to="PipeBrain" method="_on_PipeTentacles_Reset"]

[connection signal="player_killed" from="PipeBrain" to="." method="_on_player_killed"]

[connection signal="body_enter" from="Area2D" to="PipeBrain" method="_on_player_pass"]


